<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/list_item_background">

        <TextView
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="+88"/>

        <EditText
            android:padding="@dimen/_10sdp"
            android:layout_gravity="center"
            android:id="@+id/et_mobile_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxLength="11"
            android:background="@color/transparent"
            android:hint="@string/hint_enter_your_number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:minHeight="45dp"
            android:textSize="16sp"/>

        <ImageButton
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            android:id="@+id/ib_resend"
            android:scaleType="centerInside"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_send_code"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_round_edges_login"
        android:text="@string/get_code"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_count_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:padding="5dp"
        android:gravity="center"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_otp_verification_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <TextView
            android:gravity="center"
            android:id="@+id/tv_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_verification_label"/>

        <LinearLayout
            android:id="@+id/ll_registration_mobile_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.amirsons.inventory.ui.widgets.OTPEditText
                android:id="@+id/mobile_one"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_white_with_app_edge"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="1"
                android:textCursorDrawable="@color/colorAccent"/>

            <com.amirsons.inventory.ui.widgets.OTPEditText
                android:id="@+id/mobile_two"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/circle_white_with_app_edge"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="1"
                android:textCursorDrawable="@color/colorAccent"/>

            <com.amirsons.inventory.ui.widgets.OTPEditText
                android:id="@+id/mobile_three"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/circle_white_with_app_edge"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="1"
                android:textCursorDrawable="@color/colorAccent"/>

            <com.amirsons.inventory.ui.widgets.OTPEditText
                android:id="@+id/mobile_four"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/circle_white_with_app_edge"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="1"
                android:textCursorDrawable="@color/colorAccent"/>

            <com.amirsons.inventory.ui.widgets.OTPEditText
                android:id="@+id/mobile_five"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/circle_white_with_app_edge"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="1"
                android:textCursorDrawable="@color/colorAccent"/>

            <com.amirsons.inventory.ui.widgets.OTPEditText
                android:id="@+id/mobile_six"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/circle_white_with_app_edge"
                android:gravity="center"
                android:hint="0"
                android:inputType="number"
                android:maxLength="1"
                android:textCursorDrawable="@color/colorAccent"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_round_edges_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>
